--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   "description": "",
   "dependencies": {
     "axios": "^1.7.9",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.10.0",
     "nodemon": "^3.1.9"
   }
 }
